Comment unused selectors to remove warnings

--- a/www/views/styles.sass
+++ b/www/views/styles.sass
@@ -95,7 +95,7 @@ a
   .first
     background: none
 
-  .active a
+  //.active a
 
 #page
   width: 900px
@@ -120,7 +120,7 @@ a
     a
       color: #232F01
 
-  .entry
+  //.entry
   .meta
     font-weight: bold
 
